--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,19 @@
-/*
-.header {
-  background-color: lightseagreen;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  min-height: 60px;
+.weather {
+  position: relative;
+}
+
+.weather_info {
+  position: absolute;
+  top: 20px;
+  left: 16px;
+  color: #fff;
+  font-size: 36px;
+}
+
+.weather_image {
+  width: 100%;
+}
+
+.main {
   padding: 0 20px;
-  top: 32px;
-  height: 40px;
 }
-
-.header__logo {
-  display: flex;
-  gap: 20px;
-  align-items: center;
-}
-
-.header__avatar-logo {
-  display: flex;
-  gap: 20px;
-  align-items: center;
-}
-*/
