--- a/src/WeatherCard/WeatherCard.css
+++ b/src/WeatherCard/WeatherCard.css
@@ -1,4 +1,6 @@
-.weather_image {
-  height: 250px;
-  width: 282px;
+@media screen and (max-width: 590px) {
+  .weather {
+    height: 80px;
+    width: 343px;
+  }
 }
