--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -11,7 +11,7 @@
 }
 
 .modal__content {
-  background-color: white;
+  background-color: #fff;
   max-width: 496px;
   width: 100%;
   border-radius: 20px;
@@ -65,10 +65,6 @@
   margin-bottom: 10px;
 }
 
-.modal__label > div {
-  margin: 5px;
-}
-
 .modal__input {
   font-size: 16px;
   padding: 0;
@@ -88,6 +84,33 @@
 
 .modal__input::placeholder {
   transform: translateY(8px);
+}
+
+.modal__labelSelect {
+  color: #808080;
+  display: flex;
+  flex-direction: column;
+  font-size: 16px;
+  width: 100%;
+  font-weight: bold;
+  font-family: "Cabinet Grotesk", Arial, sans-serif;
+  margin: 0;
+}
+
+.modal__labelSelect > div {
+  margin: 5px;
+}
+
+input[type="radio"]:checked {
+  background-color: #000;
+}
+
+input[type="radio"] + label {
+  color: #808080;
+}
+
+input[type="radio"]:checked + label {
+  color: #000;
 }
 
 .modal__close {
