--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -27,15 +27,14 @@
   line-height: 20px;
   font-family: "Cabinet Grotesk", Arial, sans-serif;
   height: 20px;
-  margin-top: 0;
-  margin-bottom: 5px;
+  margin: 0px;
 }
 
 .modal__form {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-top: 0;
+  margin-top: 30px;
   border: none;
   align-items: column;
 }
@@ -46,7 +45,7 @@
   border: none;
   width: 100%;
   margin-top: 0;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
   padding: 0;
 }
 
@@ -58,7 +57,8 @@
   font-weight: bold;
   font-family: "Cabinet Grotesk", Arial, sans-serif;
   color: rgba(0, 0, 0, 1);
-  margin: 0;
+  margin-top: 0px;
+  margin-bottom: 10px;
 }
 
 .modal__label:last-child {
