--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,6 +6,9 @@
   padding: 0 20px;
   top: 32px;
   height: 40px;
+  font-weight: bold;
+  font-size: 20px;
+  font-family: "Cabinet Grotesk", Arial, sans-serif;
 }
 
 .header__logo {
@@ -18,4 +21,12 @@
   display: flex;
   gap: 20px;
   align-items: center;
+}
+
+.header__item {
+  background-color: rgba(255, 255, 255, 0);
+  border: none;
+  font-weight: bold;
+  font-size: 20px;
+  font-family: "Cabinet Grotesk", Arial, sans-serif;
 }
