--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -76,6 +76,7 @@
   width: 440px;
   height: 42px;
   margin: 0;
+  max-width: 100vh;
 }
 
 .modal__input:last-child {
@@ -115,7 +116,7 @@ input[type="radio"]:checked + label {
 
 .modal__close {
   margin-top: -30px;
-  margin-left: 495px;
+  margin-left: 490px;
   background-color: transparent;
   border: none;
   position: absolute;
@@ -124,6 +125,7 @@ input[type="radio"]:checked + label {
   height: 20px;
   font-size: 24px;
   transition: opacity 0.2s linear;
+  font-weight: bold;
 }
 
 .modal__close:hover {
