update my project

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,3 +4,10 @@
   margin-top: 20px;
   padding: 0 20px;
 }
+
+.profile__footer {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+  padding: 0 20px;
+}
