--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -48,8 +48,11 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
-  width: 50%; /* Set the width to 50% */
-  float: right; /* Float the element to the right */
+  width: 40%;
+  float: right;
+  gap: 20px;
+  margin-right: 20px;
+  padding-right: 20px;
 }
 
 .profile__sidebar {
