--- a/src/components/Profile/ClothesSection/ClothesSection.css
+++ b/src/components/Profile/ClothesSection/ClothesSection.css
@@ -1,31 +1,20 @@
-.clothes__section {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 20px;
-  width: 80%;
+.card {
+  position: relative;
   display: flex;
-  flex-wrap: wrap;
-}
-
-.clothes__items {
-  border: 1px solid #ccc;
-  padding: 20px;
-  width: 100%;
-}
-/*.clothes__section {
-  width: 75%;
-  float: right;
-}
-
-.header__wrapper {
-  display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   align-items: center;
 }
 
-.clothes__items {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+.card__image {
+  width: 100%;
+  height: auto;
   gap: 20px;
-}*/
+  border-radius: 15px;
+}
+
+.card__name {
+  position: absolute;
+  background-color: #fff;
+  color: rgba(0, 0, 0, 0.3);
+  border-radius: 2px;
+}
