--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -3,18 +3,7 @@
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 150px;
   display: flex;
-  flex-wrap: wrap;
-}
-
-.profile__avatar {
-  display: flex;
-  margin-left: 20px;
-  gap: 20px;
-  align-items: center;
-  width: 525px;
-  height: 56px;
-  top: 119px;
-  left: 40px;
+  padding-right: 20px;
 }
 
 .profile__item {
