--- a/src/components/Profile/SideBar/SideBar.css
+++ b/src/components/Profile/SideBar/SideBar.css
@@ -1,15 +1,10 @@
-.sidebar {
-  width: 20%;
+.profile__avatar {
   display: flex;
-  flex-direction: column;
+  margin-left: 20px;
+  gap: 20px;
   align-items: center;
-}
-
-.sidebar__image {
-  width: 50px;
-  height: 50px;
-}
-
-.sidebar__title {
-  margin-top: 10px;
+  width: 530px;
+  height: 56px;
+  top: 119px;
+  left: 40px;
 }
