--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -1,3 +1,24 @@
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card__image {
+  width: 100%;
+  height: auto;
+  gap: 20px;
+  border-radius: 15px;
+}
+
+.card__name {
+  position: absolute;
+  background-color: #fff;
+  color: rgba(0, 0, 0, 0.3);
+  border-radius: 2px;
+}
+
 @media screen and (max-width: 590px) {
   .card__image {
     height: 164px;
