--- a/src/components/Profile/ClothesSection/ClothesSection.css
+++ b/src/components/Profile/ClothesSection/ClothesSection.css
@@ -20,3 +20,11 @@
   border-radius: 2px;
 }
 */
+.profile__itemsCard {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  width: 60%;
+  float: right;
+  gap: 20px;
+}
