--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,7 +1,9 @@
 .profile__itemSection {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 150px;
+  grid-template-columns: 1fr 3fr;
+  gap: 20px;
+  /*grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 150px; */
   display: flex;
   padding-right: 20px;
 }
@@ -29,7 +31,7 @@
 
 .profile__items {
   display: flex;
-  justify-content: flex-start;
+  justify-content: flex-starts;
 }
 /*
 .profile__itemsCard {
