--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -30,3 +30,14 @@
   font-size: 20px;
   font-family: "Cabinet Grotesk", Arial, sans-serif;
 }
+
+.avatar__placeholder {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  font-size: 24px;
+}
