--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -12,7 +12,7 @@
 
 .modal__content {
   background-color: #fff;
-  max-width: 410px;
+  max-width: 440px;
   width: 100%;
   border-radius: 20px;
   padding: 34px 36px;
@@ -47,6 +47,8 @@
   justify-content: center;
   border: none;
   align-items: column;
+  font-family: "Cabinet Grotesk", Arial, sans-serif;
+  font-size: 16px;
 }
 
 .modal__fieldset {
@@ -82,15 +84,19 @@
   font-weight: bold;
 }
 
+.modal__labelError {
+  color: #FF4D00;
+}
+
+
 .modal__label {
   display: flex;
   flex-direction: column;
   font-size: 16px;
-  width: 100%;
   font-weight: bold;
   font-family: "Cabinet Grotesk", Arial, sans-serif;
   color: rgba(0, 0, 0, 1);
-  margin-top: 0px;
+  margin-top: 20px;
   margin-bottom: 10px;
 }
 
@@ -99,17 +105,19 @@
 }
 
 .modal__input {
+  padding: 5px;
+  border: none;
+  border-bottom: #000 solid 1px;
   font-size: 16px;
-  padding: 0;
-  border: 1px solid rgba(0, 0, 0, 1);
-  border-top-style: none;
-  border-right-style: none;
-  border-left-style: none;
-  box-sizing: border-box;
-  /*width: 440px;*/
-  height: 42px;
+  height: 32px;
   margin: 0;
-  max-width: 100vh;
+}
+
+.modal__inputError {
+  color: #FF4D00;
+  padding: 5px;
+  border: none;
+  border-bottom: #FF4D00 solid 1px;
 }
 
 .modal__input:last-child {
@@ -176,17 +184,28 @@ input[type="radio"]:checked + label {
 }
 
 .modal__save {
+  background-color: #d3d3d3;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
   height: 36px;
   width: 124px;
-  border-radius: 1px;
-  color: #fff;
+  transition: 0.2s ease-in-out;
+  margin-top: 45px;
+}
+
+.modal__save:hover:not(:disabled) {
   cursor: pointer;
-  border: none;
-  pointer-events: all;
-  background-color: rgba(0, 0, 0, 0.3);
-  margin-top: 10px;
-  margin-bottom: 10px;
-  font-weight: bold;
+  background-color: #000;
+}
+
+.modal__save:disabled {
+  background-color: #d3d3d3;
+}
+
+.modal__save_enabled {
+  background-color: #000;
+  color: #fff;
 }
 
 .modal__delete {
@@ -252,6 +271,23 @@ input[type="radio"]:checked + label {
   opacity: 0.5;
 }
 
+.modal__register {
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 16px;
+  transition: 0.2s;
+  position: relative;
+  top: 30px;
+  left: 140px;
+  margin-bottom: -44px;
+  width: fit-content;
+}
+
+.modal__register {
+  cursor: pointer;
+  color: rgba(0, 0, 0, 0.6);
+  color:#d3d3d3;
+}
+
 @media screen and (max-width: 590px) {
   .modal__fieldset {
     margin-bottom: 25px;
@@ -289,5 +325,6 @@ input[type="radio"]:checked + label {
     height: 44px;
     width: 343px;
     margin: 0;
+    background-color: #d3d3d3;
   }
 }
