--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,9 @@
 .footer {
   display: flex;
+  position: relative;
   justify-content: space-between;
   margin-top: 20px;
+  margin-bottom: 20px;
   padding: 0 20px;
 }
 
