--- a/src/components/ItemModal/ItemModal.css
+++ b/src/components/ItemModal/ItemModal.css
@@ -1,5 +1,6 @@
 .modal__content img {
   max-width: 100%;
-  max-height: 400px;
+  max-height: 430px;
   object-fit: contain;
+  margin-top: 10px;
 }
