update my project

--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -31,7 +31,8 @@
 
 .profile__items {
   display: flex;
-  justify-content: flex-starts;
+  position: relative;
+  left: 220px;
 }
 /*
 .profile__itemsCard {
