--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,9 +2,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  min-height: 60px;
+  min-height: 92px;
   padding: 0 20px;
-  top: 32px;
+  /*top: 32px;*/
   height: 40px;
   font-weight: bold;
   font-size: 20px;
