--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -19,8 +19,9 @@
 
 .header__avatar-logo {
   display: flex;
-  gap: 20px;
   align-items: center;
+  position: relative;
+  right: 30px;
 }
 
 .header__item {
@@ -49,12 +50,15 @@
   grid-area: e;
   border-radius: 50%;
   object-fit: cover;
+  position: relative;
 }
 .header__username {
   margin-left: 20px;
-  margin-right: 12px;
+  margin-right: 20px;
   grid-area: d;
   color: black;
+  font-size: 20px;
+  font-family: "CabinetGrotesk-Regular", sans-serif;
 }
 
 .header__avatarPlaceholder {
@@ -98,8 +102,8 @@
 }
 
 .header__profileLink {
-  display: "flex";
-  align-items: "center";
+  display: flex;
+  align-items: center;
 }
 
 @media screen and (min-width: 750px) and (max-width: 900px) {
