--- a/src/components/Profile/SideBar/SideBar.css
+++ b/src/components/Profile/SideBar/SideBar.css
@@ -1,40 +1,3 @@
-/*.profile {
-  display: flex;
-  justify-content: space-between;
-}
-
-.profile__info {
-  display: table-column;
-}
-
-.profile__avatar {
-  display: flex;
-  margin-left: 20px;
-  gap: 20px;
-  align-items: center;
-  width: 400px;
-  height: 56px;
-  top: 119px;
-  left: 40px;
-}
-
-.profile__username {
-  margin: 0px;
-  line-height: 25px;
-  font-size: 20px;
-  margin-left: 16px;
-}
-
-.profile__button {
-  cursor: pointer;
-  background-color: transparent;
-  border: none;
-  line-height: 25px;
-  font-size: 20px;
-  padding-bottom: 8px;
-}
-*/
-
 body {
   background-color: white;
   font-family: Arial, sans-serif;
@@ -42,11 +5,13 @@ body {
 
 .profile__avatar {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   margin-top: 75px;
   position: relative;
-  left: 6px;
+  left: -29px;
+  font-family: "Cabinet Grotesk", Arial, sans-serif;
+  font-size: 20px;
 }
 
 .profile__avatar img {
