--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,10 +1,23 @@
 .footer {
   display: flex;
-  position: relative;
   justify-content: space-between;
-  margin-top: 250px;
-  margin-bottom: 20px;
-  padding: 0 20px;
+  align-items: center;
+  padding: 20px;
+  position: fixed;
+  bottom: 0;
+  width: 98%;
+}
+
+.footer__text {
+  font-size: 20px;
+  font-weight: bold;
+  font-family: "Cabinet Grotesk", Arial, sans-serif;
+}
+
+.footer__year {
+  font-size: 20px;
+  font-weight: bold;
+  font-family: "Cabinet Grotesk", Arial, sans-serif;
 }
 
 .profile__footer {
