--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -296,6 +296,8 @@ input[type="radio"]:checked + label {
   width: fit-content;
   font-family: "Cabinet Grotesk", Arial, sans-serif;
   font-weight: bold;
+  border: none;
+  background-color: #fff;
 }
 
 .modal__register {
